[metadata]
name = latexplotlib
version = 0.2.0
author = Constantin Gahr
author_email = constantin.gahr+latexplotlib@gmail.com
description = Perfect matplotlib figures for latex
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ConstantinGahr/latexplotlib
project_urls =
    Bug Tracker = https://github.com/ConstantinGahr/latexplotlib/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src

[flake8]
max-line-length = 88
extend-ignore = "E203, W503, E402"
per-file-ignores =
    __init__.py: F401,F403
    tests/*: S101
[pylint.]
max-line-length = 88
disable =
    format,
    import-error,
    multiple-statements,
    no-else-return,
    too-many-arguments,
    too-many-locals,
    unneeded-not,

# allow one-letter variables, allow variables starting with one capital letter (i.e.
# matrices)
good-names-rgxs = ([A-Za-z]{1}|[A-Z]{1}.*)$
good-names = df, ax, y1, y2
ignore-patterns= .*\.md$

[pylint.similarities]
ignore-imports=yes

[pycodestyle]
max-line-length = 88
ignore = "E203, W503, E402"
